--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,20 @@
-anyio==3.6.2
-async-generator==1.10
-attrs==23.1.0
-beautifulsoup4==4.12.0
-certifi==2023.5.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
+annotated-types==0.5.0
+anyio==3.7.1
+beautifulsoup4==4.12.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.6
 colorama==0.4.6
-exceptiongroup==1.1.1
-fastapi==0.95.0
+exceptiongroup==1.1.2
+fastapi==0.101.0
 h11==0.14.0
 idna==3.4
-outcome==1.2.0
-packaging==23.1
-pycparser==2.21
-pydantic==1.10.7
-PySocks==1.7.1
-requests==2.30.0
-selenium==4.8.2
+pydantic==2.1.1
+pydantic_core==2.4.0
+requests==2.31.0
 sniffio==1.3.0
-sortedcontainers==2.4.0
 soupsieve==2.4.1
-starlette==0.26.1
-tqdm==4.65.0
-trio==0.22.0
-trio-websocket==0.10.2
-typing_extensions==4.5.0
-urllib3==1.26.15
-uvicorn==0.21.1
-webdriver-manager==3.8.5
-wsproto==1.2.0
+starlette==0.27.0
+typing_extensions==4.7.1
+urllib3==2.0.4
+uvicorn==0.23.2
