--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,8 @@
-annotated-types==0.5.0
-anyio==3.7.1
-beautifulsoup4==4.12.2
-certifi==2023.7.22
-charset-normalizer==3.2.0
-click==8.1.6
+blinker==1.7.0
+click==8.1.7
 colorama==0.4.6
-exceptiongroup==1.1.2
-fastapi==0.109.2
-h11==0.14.0
-idna==3.4
-pydantic==2.1.1
-pydantic_core==2.4.0
-requests==2.31.0
-sniffio==1.3.0
-soupsieve==2.4.1
-starlette==0.36.3
-typing_extensions==4.9.0
-urllib3==2.0.4
-uvicorn==0.23.2
+Flask==3.0.2
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+Werkzeug==3.0.1
