build: :green_heart: Hosting project at Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "run.py", "use": "@vercel/python" }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "run.py"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "run" }]
 }
