build: 💚 Hosting project at Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,15 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "run" }]
+  "version": 2,
+  "builds": [
+      {
+          "src": "./run.py",
+          "use": "@vercel/python"
+      }
+  ],
+  "routes": [
+      {
+          "src": "/(.*)",
+          "dest": "/"
+      }
+  ]
 }
