--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
   "version": 2,
   "builds": [
-      {
-          "src": "./run.py",
-          "use": "@vercel/python"
-      }
+    {
+      "src": "src/main/server/server.py",
+      "use": "@vercel/python"
+    }
   ],
   "routes": [
-      {
-          "src": "/(.*)",
-          "dest": "/"
-      }
+    {
+      "src": "/(.*)",
+      "dest": "src/main/server/server.py"
+    }
   ]
 }
