--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,10 @@
       "src": "/(.*)",
       "dest": "src/main/server/server.py"
     }
-  ]
+  ],
+  "functions": {
+    "src/main/server/server.py": {
+      "includeFiles": "src/drivers/ub_handler.py"
+    }
+  }
 }
