--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aniso8601==9.0.1
 beautifulsoup4==4.12.3
 blinker==1.7.0
 Cerberus==1.3.5
@@ -7,11 +8,15 @@ click==8.1.7
 colorama==0.4.6
 Flask==3.0.2
 Flask-Cors==4.0.0
+Flask-RESTful==0.3.10
+flask-restful-swagger-2==0.35
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+pytz==2024.1
 requests==2.31.0
+six==1.16.0
 soupsieve==2.5
 urllib3==2.2.1
 Werkzeug==3.0.1
