--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aniso8601==9.0.1
+attrs==23.2.0
 beautifulsoup4==4.12.3
 blinker==1.7.0
 Cerberus==1.3.5
@@ -6,15 +7,23 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+flasgger==0.9.7.1
 Flask==3.0.2
 Flask-Cors==4.0.0
 Flask-RESTful==0.3.10
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
 MarkupSafe==2.1.5
+mistune==3.0.2
+packaging==23.2
 pytz==2024.1
+PyYAML==6.0.1
+referencing==0.33.0
 requests==2.31.0
+rpds-py==0.18.0
 six==1.16.0
 soupsieve==2.5
 urllib3==2.2.1
